# PipeCNN

./: .gitignore  CMakeLists.txt  aoc.cmake  de10standard.cmake  pipeCNN_host
project/device/: conv_pipe.cl  hw_param.cl
project/device/RTL/: c5_mac_8bitx4_tb.v  rtl_lib.aoclib
project/device/RTL/libraries/: _info
project/device/RTL/libraries/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
project/host/: main.cpp
